--- a/Frontend/src/components/DetailPage/detail.css
+++ b/Frontend/src/components/DetailPage/detail.css
@@ -178,7 +178,10 @@
       text-align: center;
 
       > p {
+        margin-top: 0.5rem;
+
         font-size: 1rem;
+        font-weight: 500;
         padding: 0.5rem;
         text-align: center;
       }
